flex styling for adjustable height, fixing drag behavior for overflow

--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -1,3 +1,21 @@
+/**
+ * Utility.
+**/
+.flex-outer {
+    position: relative;
+
+    > .flex-inner {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+    }
+}
+
+/**
+ * App-specific.
+**/
 #hanzi-hospital-app {
     width: 780px;
     height: 480px;
@@ -5,55 +23,114 @@
     margin-right: auto;
     border: thin solid #ccc;
     border-radius: 10px;
+
+    .flex-outer;
+
+    > .hh-app-inner {
+        .flex-inner;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .region-outer {
+        .flex-outer;
+        > .region {
+            .flex-inner;
+        }
+    }
+
+    .message.region-outer {
+        flex: 0 1 auto;
+    }
+
+    .main.region-outer {
+        flex: 1 1 auto;
+        min-height: 300px;
+    }
+
+    .donors.region-outer {
+        flex: 1 1 auto;
+    }
 }
 
 .hh-operating-room {
-    background: #ddd;
-    display: flex;
-    flex-direction: row;
+    height: 100%;
+    .flex-outer;
 
-    .gurney-container {
-        flex: 1 1 50%;
-        height: 260px;
-
-        &:before {
-            display: block;
-            content: ' ';
-            height: 100px;
-            background-image: url('./images/operating-room-lamp.svg');
-            background-repeat: no-repeat;
-            background-position: center top;
-        }
-    }
-
-    .gurney {
-        border: medium solid #ccc;
-        background-color: #dadada;
-        height: 100%;
-
-        &:after {
-            content: ' ';
-            display: block;
-            height: 100px;
-            background-image: url('./images/gurney-table.svg');
-            background-repeat: no-repeat;
-            background-position: center bottom;
-            background-size: contain;
-        }
-
-    }
-
-    margin-bottom: 50px;
     &:after {
         content: ' ';
         clear: both;
         display: block;
     }
 
+    > .hh-operating-room-inner {
+        background: #ddd;
+        display: flex;
+        flex-direction: row;
+        .flex-inner;
+    }
+
+    .gurney-container {
+        .flex-outer;
+        flex: 1 1 50%;
+        height: 100%;
+
+        &:before {
+            position: absolute;
+            display: block;
+            content: ' ';
+            top: 0;
+            height: 20%;
+            width: 100%;
+            background-image: url('./images/operating-room-lamp.svg');
+            background-repeat: no-repeat;
+            background-position: center top;
+        }
+
+        > .gurney-inner {
+            .flex-inner;
+            top: 20%;
+
+            > .label {
+                height: 30px;
+            }
+
+            > .gurney {
+                background-color: #dadada;
+                position: absolute;
+                top: 30px;
+                left: 0;
+                right: 0;
+                bottom: 30%;
+            }
+
+            &:after {
+                content: ' ';
+                display: block;
+                position: absolute;
+                width: 100%;
+                height: 30%;
+                bottom: 0;
+                background-image: url('./images/gurney-table.svg');
+                background-repeat: no-repeat;
+                background-position: center bottom;
+                background-size: contain;
+            }
+        }
+
+    }
+
+
+
     .hh-character {
+        height: 100%;
+        > table {
+            height: 100%;
+            width: 100%;
+        }
 
         .meaning-pinyin-container {
-            width: 100px;
+            min-width: 100px;
         }
 
         .hh-component {
@@ -119,6 +196,7 @@
         height: 100%;
         width: auto;
         left: 0;
+        top: 0;
     }
 
 }
